force-app/main/default/objects/EntCrossOrgUsageStats__c.object
<CustomObject>
    <description>Holds usage stats regarding the cross-org initiative. This object only holds history from actions taken on the Enterprise side (viewing tasks, notes, etc).</description>
    <fields>
        <fullName>Action__c</fullName>
        <description>The action being tracked.</description>
        <label>Action</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actor_Id__c</fullName>
        <description>The person that triggers the tracking.</description>
        <label>Actor Id</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>The record related to the tracked data.</description>
        <label>Related Record Id</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Enterprise Cross Org Usage</label>
    <nameField>
        <displayFormat>CO-{00000}</displayFormat>
        <label>Ent Cross Org History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise Cross Org Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>